--- a/setup.css
+++ b/setup.css
@@ -77,6 +77,7 @@ nav ul li a:hover::after{
     font-size: 190px;
     line-height: 160px;
     margin-left: -10px;
+    margin-bottom: 35px;
     color: transparent;
     -webkit-text-stroke: 1px #fff;
     background: url(https://tylerrrr.eu/images/mainpage/back.png);
